# python.quicke

./: .env  .gitignore  main.py  pyproject.toml
_frontend/: index.html  package-lock.json
_frontend/src/: main.tsx
api/: pagination.py  settings.py  urls.py
apps/cnc/: admin.py  endpoints.py  models.py
apps/demo/: admin.py  endpoints.py  models.py
apps/rainer/: __init__.py  admin.py  assistant_prompts.py  endpoints.py  gpt.py  instructions.py  models.py  settings.py  types.py
apps/task_manager/: models.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  custom.css  fetchJSON.ts  fonts.css  index.html  main.tsx
gpt/: directives.py  lib.py  personas.py  the_a_team.py  tools.py
op_results/gpt-4/: create a readme file.json
op_results/gpt-4-turbo/: create a readme file.json
op_results/tmchecks/: create a readme file.json
op_results/tmchecks2/: create a readme file.json
quicke/: __init__.py  lib.py  urls.py  util.py
quicke/decorators/: endpoint.py  model.py
quicke/discovery/: apps.py  endpoints.py  models.py
quicke/tsgen/: codegen.py  endpoints.py  models.py  snippets.py  ts.py  typescript.py
rainer/: __init__.py  admin.py  endpoints.py  fileapi.py  gpt.py  instructions.py  models.py  settings.py  types.py
rainer/agents/: __init__.py  all_directives.py  directives.py  intros.py  lib.py  models.py  personas.py  prompts.py  refactor_agent.py  the_a_team.py  tools.py
rainer/gpt/: gpt.py  (+3 more)
task_manager/: enums.py  models.py  models_for_agents.py  models_for_tasks.py
(+157 files in other folders)
